--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "nodemon": "^2.0.3",
     "ts-jest": "^25.3.1",
     "ts-node": "^8.8.2",
-    "ts-node-dev": "^1.0.0-pre.44",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^3.8.3"
   },
   "dependencies": {
